# shiny-pydantic

./: LICENSE  README.md  pyproject.toml
examples/: nested_model.py  nested_model_defaults.py  simple_model.py  simple_model_defaults.py
src/shiny_pydantic/: checks.py  render.py  utility.py
