[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shiny_pydantic"
version = "0.0.1"
authors = [
  { name="Trevor Nederlof", email="tnederlof@gmail.com" },
]
description = "Generate Shiny UI inputs automatically from Pydantic models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "shiny>=1.2.1",
  "pydantic[email]>=2.0",
  "packaging",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shiny_pydantic"]

[project.urls]
"Homepage" = "https://github.com/tnederlof/shiny-pydantic"
"Bug Tracker" = "https://github.com/tnederlof/shiny-pydantic/issues"